--- a/src/app/quiz/quiz-card/quiz-card.component.html
+++ b/src/app/quiz/quiz-card/quiz-card.component.html
@@ -1,2 +1,5 @@
-<img [width]="artWidth" [height]="artHeight" src="{{base64Image}}">
+
+
+    <ion-img width="100%" height="100%" src="{{base64Image}}"></ion-img>
+
 
