--- a/src/app/quiz/quiz-questions/whats-the-type/whats-the-type.component.html
+++ b/src/app/quiz/quiz-questions/whats-the-type/whats-the-type.component.html
@@ -1,13 +1,13 @@
 <div class="answers">
     <ng-container *ngFor="let answer of answers">
+
         <ion-button [ngClass]="{'glow': answer.selected}"
                     (click)="answer.selected = !answer.selected"
-                    type="button" fill="clear" expand="block"
+                    type="button" fill="clear" expand="block" size="small"
                     [color]="showSolution && answer.correct ? 'success' : 'dark'"
                     [@changeState]="showSolution ? answer.state : defaultState">
-            <ion-icon slot="start" name="arrow-dropright" *ngIf="answer.selected"></ion-icon>
+            <ion-icon slot="start" name="checkmark-circle-outline" *ngIf="answer.selected"></ion-icon>
             {{answer.value}}
-            <ion-icon slot="end" name="arrow-dropleft" *ngIf="answer.selected"></ion-icon>
         </ion-button>
     </ng-container>
 </div>
