--- a/src/app/quiz/quiz.page.scss
+++ b/src/app/quiz/quiz.page.scss
@@ -75,11 +75,11 @@
   }
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 340px) {
   .container {
     position: relative;
-    width: 320px;
-    height: 453px;
+    width: 340px;
+    height: 481px;
   }
 
   .name,
@@ -185,6 +185,7 @@
   z-index: 1;
   position: relative;
   height: 108%;
+  width: 97%;
   max-width: 97%;
   top: 0.5%;
   left: 1.6%;
@@ -222,7 +223,8 @@
 }
 
 .frame-art {
-  height: 50%;
+  width: 94%;
+  height: 180%;
   margin: 0 13px;
 }
 
