--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,10 +1,15 @@
 ion-content {
-  height: 8em;
-  width: 16em;
+  height: 400px;
+  width: 300px;
   margin: 0;
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translateY(-50%, -50%);
   transform: translate(-50%, -50%);
+}
+
+.record {
+  margin-top: 12px;
+  padding: 0px 12px;
 }
