--- a/src/app/quiz/quiz.page.html
+++ b/src/app/quiz/quiz.page.html
@@ -12,7 +12,7 @@
                     </div>
                 </div>
                 <div class="frame-art">
-                    <app-quiz-card [card]="currentCard"></app-quiz-card>
+                    <app-quiz-art [card]="currentCard"></app-quiz-art>
                 </div>
                 <div class="frame-type-line">
                     <span class="type">Card {{cardIndex}}: {{quizQuestion}}</span>
