--- a/src/app/quiz/quiz-art/quiz-art.component.html
+++ b/src/app/quiz/quiz-art/quiz-art.component.html
@@ -1,4 +1,3 @@
-<ion-img width="100%" height="100%" src="../../../assets/wallpaper.jpg" *ngIf="!base64Image"></ion-img>
-<ion-img width="100%" height="100%" src="{{base64Image}}" *ngIf="base64Image"></ion-img>
+<ion-img width="100%" height="100%" src="{{base64Image}}" *ngIf="base64Image" [@enterAnimation]></ion-img>
 
 
