--- a/src/app/quiz/quiz.page.html
+++ b/src/app/quiz/quiz.page.html
@@ -1,49 +1,13 @@
-<div class="container">
+<div class="container" *ngIf="game$ | async as game">
     <div class="border-art" *ngIf="showBorderArt">
-        <img [src]="currentCard.image_uris.border_crop">
+        <img [src]="game.card.image_uris.border_crop">
     </div>
-    <div class="card-container">
-        <div class="card-background">
-            <div class="card-frame">
-                <div class="frame-header">
-                    <span class="name">Quiz - Standard</span>
-                    <div class="mana-icons">
-                        <img class="m-i" src="../../assets/icon/{{l}}.svg" *ngFor="let l of lives">
-                    </div>
-                </div>
-                <div class="frame-art">
-                    <app-quiz-art [card]="currentCard"></app-quiz-art>
-                </div>
-                <div class="frame-type-line">
-                    <span class="type">Card {{cardIndex}}: {{quizQuestion}}</span>
-                </div>
-                <div class="frame-text-box">
-                    <div *ngIf="quizService.isCardLoaded$ | async">
-                        <app-quiz-questions [card]="currentCard"
-                                            (quizQuestion)="quizQuestion = $event"
-                                            (answer)="handleQuizQuestionResult(currentCard, $event)"></app-quiz-questions>
-                    </div>
-
-                </div>
-                <div class="frame-bottom-info inner-margin">
-                    <div class="fbi-left">
-                        <p>hfgl</p>
-                        <p>{{cardIndex}} &#x2022; EN
-                            <img class="paintbrush" src="https://image.ibb.co/e2VxAS/paintbrush_white.png"
-                                 alt="paintbrush icon"> druckreich</p>
-                    </div>
-                    <div class="fbi-right">
-                        &#x99; &amp; &#169; 2016 Wizards of the Coast
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="isShowBorderArtButtonVisible">
-        <ion-fab-button [color]="wasLastAnswerCorrect ? 'success' : 'danger'" (click)="showBorderArt = !showBorderArt">
+    <app-quiz-card [game]="game" (result)="handleQuizQuestionResult($event)"></app-quiz-card>
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="showQuizButtons">
+        <ion-fab-button (click)="toggleShowBorderArt()">
             <ion-icon name="search"></ion-icon>
         </ion-fab-button>
-        <ion-fab-button color="primary" >
+        <ion-fab-button color="primary">
             <ion-icon name="checkmark" (click)="showNextCard()"></ion-icon>
         </ion-fab-button>
     </ion-fab>
