--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content *ngIf="true">
     <ion-button color="primary" expand="block" size="large" (click)="startQuiz('standard')">Standard</ion-button>
     <div class="record" *ngIf="record$ | async as record">
         <ion-text color="medium" *ngIf="record.standard == 0">
@@ -9,13 +9,13 @@
         </ion-text>
     </div>
     <br>
-  <ion-button color="primary" expand="block" size="large" (click)="startQuiz('modern')">Modern</ion-button>
-  <div class="record" *ngIf="record$ | async as record">
-    <ion-text color="medium" *ngIf="record.standard == 0">
-      Für den Spielmodus Modern ist noch kein Rekord gespeichert!
-    </ion-text>
-    <ion-text color="medium" *ngIf="record.standard > 0">
-      Bisheriger Rekord {{record.standard}}
-    </ion-text>
-  </div>
+    <ion-button color="primary" expand="block" size="large" (click)="startQuiz('modern')">Modern</ion-button>
+    <div class="record" *ngIf="record$ | async as record">
+        <ion-text color="medium" *ngIf="record.standard == 0">
+            Für den Spielmodus Modern ist noch kein Rekord gespeichert!
+        </ion-text>
+        <ion-text color="medium" *ngIf="record.standard > 0">
+            Bisheriger Rekord {{record.standard}}
+        </ion-text>
+    </div>
 </ion-content>
