--- a/src/app/quiz/quiz-questions/whats-the-color/whats-the-color.component.html
+++ b/src/app/quiz/quiz-questions/whats-the-color/whats-the-color.component.html
@@ -10,7 +10,7 @@
         </ion-button>
     </ng-container>
 </div>
-<ion-fab class="validate" vertical="bottom" horizontal="end" slot="fixed" *ngIf="!showSolution">
+<ion-fab class="validate" vertical="bottom" horizontal="end" slot="fixed" *ngIf="showButton">
     <ion-fab-button color="primary" (click)="validate()">
         <ion-icon name="checkmark"></ion-icon>
     </ion-fab-button>
