--- a/src/app/quiz/quiz-card/quiz-card.component.scss
+++ b/src/app/quiz/quiz-card/quiz-card.component.scss
@@ -1,3 +1,8 @@
+.border-art {
+  position: absolute;
+  z-index: 2;
+}
+
 @media only screen and (min-width: 480px) {
   .container {
     position: relative;
